SpiderData/oschina/Clean/00137.txt
系统炸了导致不得已重装

安装 Django后 利用ORM 创建表的时候报错

1 Traceback (most recent call last):
2   File "manage.py", line 17, in <module>
3     "Couldn't import Django. Are you sure it's installed and "
4 ImportError: Couldn't import Django. Are you sure it's installed and available on your PYTHONPATH environment variable? Did you forget to activate a virtual environment?
5 
6 F:\python_django>python manage.py makemigrations

提示不能导入。我是用的pycharm导入方式。而且在pycharm中也可以看到

有点不科学。那就用普通的方式再来一次试试。

这次的报错多少科学点了。虽然我不是很懂这个报错是什么原因。但是提示的是语法错误，找到错误位置看下

1    from django.contrib.admin.options import IncorrectLookupParameters
2   File "C:\Users\Administrator\AppData\Local\Programs\Python\Python37-32\lib\site-packages\django\contrib\admin\options.py", line 12, in <module>
3     from django.contrib.admin import helpers, widgets
4   File "C:\Users\Administrator\AppData\Local\Programs\Python\Python37-32\lib\site-packages\django\contrib\admin\widgets.py", line 152
5     '%s=%s' % (k, v) for k, v in params.items(),
6     ^
7 SyntaxError: Generator expression must be parenthesized

程序开发的源码，看起来也没有什么错误。但是我就是觉得那个逗号有点怪。很没有必要的感觉。反正走到这里暂时也没办法。去掉试下？

虽然提示不要改，但是我觉得这个逗号确实没意义。去掉反正也没有什么影响。

我去？你在逗我。。。

事后查阅了很多的资料以及其他人的分享。关于貌似是因为mysql数据库的版本问题导致。在Python3.6以上的版本会出现这种问题，大概吧。关于这个现象我只找到了一位和我有相同经历的博文。他的解决方法也是一样去掉了逗号，

总结：这是一个神奇的逗号。

